# bangumi-pusher

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
helper/: BGMClient.py  BGMService.py
