[project]
name = ""
version = ""
description = ""
authors = [
    {name = "cydia2001", email = "shizukuprprpr@gmail.com"},
]
dependencies = [
    "requests>=2.27.1",
    "requests-oauthlib>=1.3.1",
    "oauthlib>=3.2.0",
    "fastapi>=0.75.2",
    "uvicorn[standard]>=0.17.6",
    "pypushdeer>=0.0.3",
    "apscheduler>=3.9.1",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
